// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`symbolEncoding snapshot of class constant symbols after encode and decode 1`] = `
ClassConstant {
  "location": Location {
    "range": Range {
      "end": Position {
        "character": 21,
        "line": 2,
        "offset": 59,
      },
      "start": Position {
        "character": 10,
        "line": 2,
        "offset": 48,
      },
    },
    "uri": "case/class_constants.php",
  },
  "name": TypeName {
    "name": "CONST1",
  },
  "scope": TypeName {
    "name": "\\\\ClassWithConst",
  },
}
`;

exports[`symbolEncoding snapshot of class constant symbols after encode and decode 2`] = `
ClassConstant {
  "location": Location {
    "range": Range {
      "end": Position {
        "character": 19,
        "line": 3,
        "offset": 80,
      },
      "start": Position {
        "character": 10,
        "line": 3,
        "offset": 71,
      },
    },
    "uri": "case/class_constants.php",
  },
  "name": TypeName {
    "name": "PI",
  },
  "scope": TypeName {
    "name": "\\\\ClassWithConst",
  },
}
`;

exports[`symbolEncoding snapshot of class constant symbols after encode and decode 3`] = `
ClassConstant {
  "location": Location {
    "range": Range {
      "end": Position {
        "character": 34,
        "line": 4,
        "offset": 116,
      },
      "start": Position {
        "character": 10,
        "line": 4,
        "offset": 92,
      },
    },
    "uri": "case/class_constants.php",
  },
  "name": TypeName {
    "name": "STATUS_ACTIVE",
  },
  "scope": TypeName {
    "name": "\\\\ClassWithConst",
  },
}
`;

exports[`symbolEncoding snapshot of class constant symbols after encode and decode 4`] = `
ClassConstant {
  "location": Location {
    "range": Range {
      "end": Position {
        "character": 38,
        "line": 5,
        "offset": 156,
      },
      "start": Position {
        "character": 10,
        "line": 5,
        "offset": 128,
      },
    },
    "uri": "case/class_constants.php",
  },
  "name": TypeName {
    "name": "STATUS_INACTIVE",
  },
  "scope": TypeName {
    "name": "\\\\ClassWithConst",
  },
}
`;

exports[`symbolEncoding snapshot of class constant symbols after encode and decode 5`] = `
ClassConstant {
  "location": Location {
    "range": Range {
      "end": Position {
        "character": 26,
        "line": 6,
        "offset": 184,
      },
      "start": Position {
        "character": 10,
        "line": 6,
        "offset": 168,
      },
    },
    "uri": "case/class_constants.php",
  },
  "name": TypeName {
    "name": "IS_ACTIVE",
  },
  "scope": TypeName {
    "name": "\\\\ClassWithConst",
  },
}
`;

exports[`symbolEncoding snapshot of constant symbols after encode and decode 1`] = `
Constant {
  "acceptWhitespace": true,
  "hasEqual": false,
  "location": Location {
    "range": Range {
      "end": Position {
        "character": 22,
        "line": 9,
        "offset": 130,
      },
      "start": Position {
        "character": 6,
        "line": 9,
        "offset": 114,
      },
    },
    "uri": "case/global_symbols.php",
  },
  "name": TypeName {
    "name": "\\\\TEST_CONST",
  },
  "refKind": 5,
  "resolvedType": TypeName {
    "name": "int",
  },
  "resolvedValue": "123",
}
`;

exports[`symbolEncoding snapshot of constant symbols after encode and decode 2`] = `
Constant {
  "acceptWhitespace": true,
  "hasEqual": false,
  "location": Location {
    "range": Range {
      "end": Position {
        "character": 23,
        "line": 11,
        "offset": 156,
      },
      "start": Position {
        "character": 6,
        "line": 11,
        "offset": 139,
      },
    },
    "uri": "case/global_symbols.php",
  },
  "name": TypeName {
    "name": "\\\\TEST_CONST1",
  },
  "refKind": 5,
  "resolvedType": TypeName {
    "name": "int",
  },
  "resolvedValue": "456",
}
`;

exports[`symbolEncoding snapshot of constant symbols after encode and decode 3`] = `
Constant {
  "acceptWhitespace": true,
  "hasEqual": false,
  "location": Location {
    "range": Range {
      "end": Position {
        "character": 42,
        "line": 11,
        "offset": 175,
      },
      "start": Position {
        "character": 25,
        "line": 11,
        "offset": 158,
      },
    },
    "uri": "case/global_symbols.php",
  },
  "name": TypeName {
    "name": "\\\\TEST_CONST2",
  },
  "refKind": 5,
  "resolvedType": TypeName {
    "name": "int",
  },
  "resolvedValue": "789",
}
`;

exports[`symbolEncoding snapshot of constant symbols after encode and decode 4`] = `
Constant {
  "acceptWhitespace": true,
  "hasEqual": false,
  "location": Location {
    "range": Range {
      "end": Position {
        "character": 41,
        "line": 13,
        "offset": 219,
      },
      "start": Position {
        "character": 6,
        "line": 13,
        "offset": 184,
      },
    },
    "uri": "case/global_symbols.php",
  },
  "name": TypeName {
    "name": "\\\\TEST_CONST_STRING",
  },
  "refKind": 5,
  "resolvedType": TypeName {
    "name": "string",
  },
  "resolvedValue": "'Simple string'",
}
`;

exports[`symbolEncoding snapshot of constant symbols after encode and decode 5`] = `
Constant {
  "acceptWhitespace": true,
  "hasEqual": false,
  "location": Location {
    "range": Range {
      "end": Position {
        "character": 54,
        "line": 14,
        "offset": 275,
      },
      "start": Position {
        "character": 6,
        "line": 14,
        "offset": 227,
      },
    },
    "uri": "case/global_symbols.php",
  },
  "name": TypeName {
    "name": "\\\\TEST_CONST_STRING2",
  },
  "refKind": 5,
  "resolvedType": TypeName {
    "name": "string",
  },
  "resolvedValue": "'Not so simple string'",
}
`;

exports[`symbolEncoding snapshot of constant symbols after encode and decode 6`] = `
Constant {
  "acceptWhitespace": true,
  "hasEqual": false,
  "location": Location {
    "range": Range {
      "end": Position {
        "character": 63,
        "line": 15,
        "offset": 340,
      },
      "start": Position {
        "character": 6,
        "line": 15,
        "offset": 283,
      },
    },
    "uri": "case/global_symbols.php",
  },
  "name": TypeName {
    "name": "\\\\TEST_CONST_STRING3",
  },
  "refKind": 5,
  "resolvedType": TypeName {
    "name": "string",
  },
  "resolvedValue": "'Quite complex ' . TEST_CONST_STRING",
}
`;

exports[`symbolEncoding snapshot of function symbols after encode and decode 1`] = `
Function {
  "description": "",
  "docParamTypes": Object {},
  "location": Location {
    "range": Range {
      "end": Position {
        "character": -1,
        "line": 31,
        "offset": 582,
      },
      "start": Position {
        "character": 0,
        "line": 2,
        "offset": 7,
      },
    },
    "uri": "case/function_declare.php",
  },
  "name": TypeName {
    "name": "\\\\test_function1",
  },
  "parameters": Array [
    Parameter {
      "location": Location {},
      "name": "$stringParam",
      "refKind": 3,
      "type": TypeComposite {
        "_types": Array [
          TypeName {
            "name": "string",
          },
        ],
      },
      "value": "",
    },
    Parameter {
      "location": Location {},
      "name": "$intParam",
      "refKind": 3,
      "type": TypeComposite {
        "_types": Array [
          TypeName {
            "name": "int",
          },
        ],
      },
      "value": "",
    },
    Parameter {
      "location": Location {},
      "name": "$boolParam",
      "refKind": 3,
      "type": TypeComposite {
        "_types": Array [
          TypeName {
            "name": "boolean",
          },
        ],
      },
      "value": "",
    },
    Parameter {
      "location": Location {},
      "name": "$floatParam",
      "refKind": 3,
      "type": TypeComposite {
        "_types": Array [
          TypeName {
            "name": "float",
          },
        ],
      },
      "value": "",
    },
  ],
  "scopeVar": Scope {
    "variables": Object {
      "$boolParam": Variable {
        "expression": Expression {},
        "location": Location {},
        "name": "$boolParam",
        "refKind": 2,
        "type": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "boolean",
            },
          ],
        },
      },
      "$floatParam": Variable {
        "expression": Expression {},
        "location": Location {},
        "name": "$floatParam",
        "refKind": 2,
        "type": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "float",
            },
          ],
        },
      },
      "$intParam": Variable {
        "expression": Expression {},
        "location": Location {},
        "name": "$intParam",
        "refKind": 2,
        "type": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "int",
            },
          ],
        },
      },
      "$stringParam": Variable {
        "expression": Expression {},
        "location": Location {},
        "name": "$stringParam",
        "refKind": 2,
        "type": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "string",
            },
          ],
        },
      },
      "$test": Variable {
        "expression": Expression {},
        "location": Location {},
        "name": "$test",
        "refKind": 2,
        "type": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "int",
            },
          ],
        },
      },
    },
  },
  "typeAggregate": TypeComposite {
    "_types": Array [
      TypeName {
        "name": "boolean",
      },
      TypeName {
        "name": "string",
      },
      TypeName {
        "name": "int",
      },
      TypeName {
        "name": "float",
      },
      TypeName {
        "name": "\\\\TestClass",
      },
    ],
  },
}
`;

exports[`symbolEncoding snapshot of function symbols after encode and decode 2`] = `
Function {
  "description": "Test function 2",
  "docParamTypes": Object {},
  "location": Location {
    "range": Range {
      "end": Position {
        "character": -1,
        "line": 40,
        "offset": 754,
      },
      "start": Position {
        "character": 0,
        "line": 38,
        "offset": 708,
      },
    },
    "uri": "case/function_declare.php",
  },
  "name": TypeName {
    "name": "\\\\test_function2",
  },
  "parameters": Array [
    Parameter {
      "location": Location {},
      "name": "$param1",
      "refKind": 3,
      "type": TypeComposite {
        "_types": Array [
          TypeName {
            "name": "\\\\array|int",
          },
        ],
      },
      "value": "",
    },
    Parameter {
      "location": Location {},
      "name": "$param2",
      "refKind": 3,
      "type": TypeComposite {
        "_types": Array [
          TypeName {
            "name": "string",
          },
        ],
      },
      "value": "",
    },
  ],
  "scopeVar": Scope {
    "variables": Object {
      "$param1": Variable {
        "expression": Expression {},
        "location": Location {},
        "name": "$param1",
        "refKind": 2,
        "type": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "\\\\array|int",
            },
          ],
        },
      },
      "$param2": Variable {
        "expression": Expression {},
        "location": Location {},
        "name": "$param2",
        "refKind": 2,
        "type": TypeComposite {
          "_types": Array [
            TypeName {
              "name": "string",
            },
          ],
        },
      },
    },
  },
  "typeAggregate": TypeComposite {
    "_types": Array [],
  },
}
`;

exports[`symbolEncoding snapshot of method symbols after encode and decode 1`] = `
Method {
  "description": "",
  "location": Location {
    "range": Range {
      "end": Position {
        "character": -1,
        "line": 27,
        "offset": 607,
      },
      "start": Position {
        "character": 4,
        "line": 25,
        "offset": 560,
      },
    },
    "uri": "case/class_methods.php",
  },
  "modifier": SymbolModifier {
    "modifier": 0,
    "visibility": 0,
  },
  "name": TypeName {
    "name": "__construct",
  },
  "scope": TypeName {
    "name": "\\\\ClassWithMethod",
  },
}
`;

exports[`symbolEncoding snapshot of method symbols after encode and decode 2`] = `
Method {
  "description": "",
  "location": Location {
    "range": Range {
      "end": Position {
        "character": -1,
        "line": 31,
        "offset": 667,
      },
      "start": Position {
        "character": 4,
        "line": 29,
        "offset": 613,
      },
    },
    "uri": "case/class_methods.php",
  },
  "modifier": SymbolModifier {
    "modifier": 0,
    "visibility": 1,
  },
  "name": TypeName {
    "name": "method1",
  },
  "scope": TypeName {
    "name": "\\\\ClassWithMethod",
  },
}
`;

exports[`symbolEncoding snapshot of method symbols after encode and decode 3`] = `
Method {
  "description": "",
  "location": Location {
    "range": Range {
      "end": Position {
        "character": -1,
        "line": 38,
        "offset": 773,
      },
      "start": Position {
        "character": 4,
        "line": 33,
        "offset": 673,
      },
    },
    "uri": "case/class_methods.php",
  },
  "modifier": SymbolModifier {
    "modifier": 0,
    "visibility": 1,
  },
  "name": TypeName {
    "name": "method2",
  },
  "scope": TypeName {
    "name": "\\\\ClassWithMethod",
  },
}
`;

exports[`symbolEncoding snapshot of method symbols after encode and decode 4`] = `
Method {
  "description": "",
  "location": Location {
    "range": Range {
      "end": Position {
        "character": -1,
        "line": 42,
        "offset": 830,
      },
      "start": Position {
        "character": 4,
        "line": 40,
        "offset": 779,
      },
    },
    "uri": "case/class_methods.php",
  },
  "modifier": SymbolModifier {
    "modifier": 0,
    "visibility": 1,
  },
  "name": TypeName {
    "name": "method3",
  },
  "scope": TypeName {
    "name": "\\\\ClassWithMethod",
  },
}
`;

exports[`symbolEncoding snapshot of method symbols after encode and decode 5`] = `
Method {
  "description": "",
  "location": Location {
    "range": Range {
      "end": Position {
        "character": -1,
        "line": 46,
        "offset": 890,
      },
      "start": Position {
        "character": 4,
        "line": 44,
        "offset": 836,
      },
    },
    "uri": "case/class_methods.php",
  },
  "modifier": SymbolModifier {
    "modifier": 0,
    "visibility": 1,
  },
  "name": TypeName {
    "name": "method4",
  },
  "scope": TypeName {
    "name": "\\\\ClassWithMethod",
  },
}
`;

exports[`symbolEncoding snapshot of method symbols after encode and decode 6`] = `
Method {
  "description": "",
  "location": Location {
    "range": Range {
      "end": Position {
        "character": -1,
        "line": 50,
        "offset": 953,
      },
      "start": Position {
        "character": 4,
        "line": 48,
        "offset": 896,
      },
    },
    "uri": "case/class_methods.php",
  },
  "modifier": SymbolModifier {
    "modifier": 0,
    "visibility": 2,
  },
  "name": TypeName {
    "name": "protectedMethod1",
  },
  "scope": TypeName {
    "name": "\\\\ClassWithMethod",
  },
}
`;

exports[`symbolEncoding snapshot of method symbols after encode and decode 7`] = `
Method {
  "description": "",
  "location": Location {
    "range": Range {
      "end": Position {
        "character": -1,
        "line": 54,
        "offset": 1072,
      },
      "start": Position {
        "character": 4,
        "line": 52,
        "offset": 959,
      },
    },
    "uri": "case/class_methods.php",
  },
  "modifier": SymbolModifier {
    "modifier": 0,
    "visibility": 4,
  },
  "name": TypeName {
    "name": "privateMethod1",
  },
  "scope": TypeName {
    "name": "\\\\ClassWithMethod",
  },
}
`;

exports[`symbolEncoding snapshot of phpDoc symbols after encode and decode 1`] = `
PhpDocument {
  "classConstants": Array [],
  "classes": Array [],
  "constants": Array [],
  "functions": Array [],
  "importTable": ImportTable {
    "imports": Object {},
  },
  "methods": Array [],
  "modifiedTime": -1,
  "properties": Array [],
  "references": Array [],
}
`;

exports[`symbolEncoding snapshot of property symbols after encode and decode 1`] = `
Property {
  "description": "",
  "location": Location {
    "range": Range {
      "end": Position {
        "character": 29,
        "line": 4,
        "offset": 60,
      },
      "start": Position {
        "character": 11,
        "line": 4,
        "offset": 42,
      },
    },
    "relativeUri": "case/class_methods.php",
  },
  "modifier": SymbolModifier {
    "modifier": 0,
    "visibility": 1,
  },
  "name": "$property1",
  "scope": null,
}
`;

exports[`symbolEncoding snapshot of property symbols after encode and decode 2`] = `
Property {
  "description": "",
  "location": Location {
    "range": Range {
      "end": Position {
        "character": 21,
        "line": 5,
        "offset": 83,
      },
      "start": Position {
        "character": 11,
        "line": 5,
        "offset": 73,
      },
    },
    "relativeUri": "case/class_methods.php",
  },
  "modifier": SymbolModifier {
    "modifier": 0,
    "visibility": 1,
  },
  "name": "$property2",
  "scope": null,
}
`;

exports[`symbolEncoding snapshot of property symbols after encode and decode 3`] = `
Property {
  "description": "Defines protected properties
",
  "location": Location {
    "range": Range {
      "end": Position {
        "character": 25,
        "line": 14,
        "offset": 326,
      },
      "start": Position {
        "character": 14,
        "line": 14,
        "offset": 315,
      },
    },
    "relativeUri": "case/class_methods.php",
  },
  "modifier": SymbolModifier {
    "modifier": 0,
    "visibility": 2,
  },
  "name": "$protected1",
  "scope": null,
}
`;

exports[`symbolEncoding snapshot of property symbols after encode and decode 4`] = `
Property {
  "description": "Defines protected properties
",
  "location": Location {
    "range": Range {
      "end": Position {
        "character": 38,
        "line": 14,
        "offset": 339,
      },
      "start": Position {
        "character": 27,
        "line": 14,
        "offset": 328,
      },
    },
    "relativeUri": "case/class_methods.php",
  },
  "modifier": SymbolModifier {
    "modifier": 0,
    "visibility": 2,
  },
  "name": "$protected2",
  "scope": null,
}
`;

exports[`symbolEncoding snapshot of property symbols after encode and decode 5`] = `
Property {
  "description": "Defines protected properties
",
  "location": Location {
    "range": Range {
      "end": Position {
        "character": 51,
        "line": 14,
        "offset": 352,
      },
      "start": Position {
        "character": 40,
        "line": 14,
        "offset": 341,
      },
    },
    "relativeUri": "case/class_methods.php",
  },
  "modifier": SymbolModifier {
    "modifier": 0,
    "visibility": 2,
  },
  "name": "$protected3",
  "scope": null,
}
`;

exports[`symbolEncoding snapshot of property symbols after encode and decode 6`] = `
Property {
  "description": "",
  "location": Location {
    "range": Range {
      "end": Position {
        "character": 33,
        "line": 16,
        "offset": 388,
      },
      "start": Position {
        "character": 14,
        "line": 16,
        "offset": 369,
      },
    },
    "relativeUri": "case/class_methods.php",
  },
  "modifier": SymbolModifier {
    "modifier": 0,
    "visibility": 2,
  },
  "name": "$protectedProperty1",
  "scope": null,
}
`;

exports[`symbolEncoding snapshot of property symbols after encode and decode 7`] = `
Property {
  "description": "A private proterty which is only used by this class
",
  "location": Location {
    "range": Range {
      "end": Position {
        "character": 29,
        "line": 23,
        "offset": 553,
      },
      "start": Position {
        "character": 12,
        "line": 23,
        "offset": 536,
      },
    },
    "relativeUri": "case/class_methods.php",
  },
  "modifier": SymbolModifier {
    "modifier": 0,
    "visibility": 4,
  },
  "name": "$privateProperty1",
  "scope": null,
}
`;
